Fix contact links styles to match (icons, color and spacing).

--- a/style.css
+++ b/style.css
@@ -373,7 +373,7 @@ a {
 }
 
 .section__links {
-  margin: 0 auto;
+  margin: 36px auto 0;
 }
 
 .section__link {
@@ -389,7 +389,7 @@ a {
   text-decoration: none;
   background-repeat: no-repeat;
   background-position: 8px;
-  background-size: 32px;
+  background-size: 36px;
 }
 
 .section__link:hover {
@@ -397,28 +397,29 @@ a {
 }
 
 .email {
-  margin-top: 32px;
+  margin-bottom: 12px;
   padding-left: 48px;
   text-align: left;
+  font-weight: 500;
   background-repeat: no-repeat;
   background-position: 8px;
-  background-size: 32px;
-  background-image: url('https://img.icons8.com/?size=100&id=pJJmXPomYuPv&format=png&color=000000');
+  background-size: 36px;
+  background-image: url('https://img.icons8.com/?size=100&id=Zp93Jltra4ez&format=png&color=111111');
 }
 
 .section__link_linkedin {
   animation-delay: 4s;
-  background-image: url('https://img.icons8.com/?size=100&id=8808&format=png&color=000000');
+  background-image: url('https://img.icons8.com/?size=100&id=98960&format=png&color=111111');
 }
 
 .section__link_github {
   animation-delay: 5s;
-  background-image: url('https://img.icons8.com/?size=100&id=RHLuYrY4GjUv&format=png&color=000000');
+  background-image: url('https://img.icons8.com/?size=100&id=62856&format=png&color=111111');
 }
 
 .section__link_goodreads {
   animation-delay: 6s;
-  background-image: url('https://img.icons8.com/?size=100&id=eRXAEL4Ekpjt&format=png&color=000000');
+  background-image: url('https://img.icons8.com/?size=100&id=106449&format=png&color=111111');
 }
 
 .link-container {
